// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`numberInput disables lower threshold 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-number-input"
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Minus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_o_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <span
          class="pf-v6-c-form-control pf-m-readonly"
        >
          <input
            aria-invalid="false"
            aria-label="Input"
            data-ouia-component-id="OUIA-Generated-TextInputBase-_r_q_"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            readonly=""
            type="number"
            value="0"
          />
        </span>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Plus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_r_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput disables upper threshold 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-number-input"
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Minus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_s_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <span
          class="pf-v6-c-form-control pf-m-readonly"
        >
          <input
            aria-invalid="false"
            aria-label="Input"
            data-ouia-component-id="OUIA-Generated-TextInputBase-_r_u_"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            readonly=""
            type="number"
            value="100"
          />
        </span>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Plus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_v_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput passes button props successfully 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-number-input"
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Minus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_1g_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          id="minus-id"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <span
          class="pf-v6-c-form-control pf-m-readonly"
        >
          <input
            aria-invalid="false"
            aria-label="Input"
            data-ouia-component-id="OUIA-Generated-TextInputBase-_r_1i_"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            readonly=""
            type="number"
            value="5"
          />
        </span>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Plus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_1j_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          id="plus-id"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput passes input props successfully 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-number-input"
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Minus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_1c_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <span
          class="pf-v6-c-form-control"
        >
          <input
            aria-invalid="false"
            aria-label="Input"
            data-ouia-component-id="OUIA-Generated-TextInputBase-_r_1e_"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            name="test-name"
            type="number"
            value="5"
          />
        </span>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Plus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_1f_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput renders custom width 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-number-input"
    style="--pf-v6-c-number-input--c-form-control--width-chars: 10;"
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Minus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_18_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <span
          class="pf-v6-c-form-control pf-m-readonly"
        >
          <input
            aria-invalid="false"
            aria-label="Input"
            data-ouia-component-id="OUIA-Generated-TextInputBase-_r_1a_"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            readonly=""
            type="number"
            value="5"
          />
        </span>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Plus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_1b_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput renders defaults & extra props 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-number-input custom"
    id="numberInput1"
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Minus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_0_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <span
          class="pf-v6-c-form-control pf-m-readonly"
        >
          <input
            aria-invalid="false"
            aria-label="Input"
            data-ouia-component-id="OUIA-Generated-TextInputBase-_r_2_"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            readonly=""
            type="number"
            value="0"
          />
        </span>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Plus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_3_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput renders disabled 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-number-input"
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Minus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_k_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <span
          class="pf-v6-c-form-control pf-m-readonly pf-m-disabled"
        >
          <input
            aria-invalid="false"
            aria-label="Input"
            data-ouia-component-id="OUIA-Generated-TextInputBase-_r_m_"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            disabled=""
            readonly=""
            type="number"
            value="90"
          />
        </span>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Plus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_n_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput renders error validated 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-number-input"
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Minus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_8_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <span
          class="pf-v6-c-form-control pf-m-readonly pf-m-error"
        >
          <input
            aria-invalid="true"
            aria-label="Input"
            data-ouia-component-id="OUIA-Generated-TextInputBase-_r_a_"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            readonly=""
            type="number"
            value="0"
          />
          <span
            class="pf-v6-c-form-control__utilities"
          >
            <span
              class="pf-v6-c-form-control__icon pf-m-status"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm-1.5 8a1.5 1.5 0 1 1 3 0v7a1.5 1.5 0 1 1-3 0V9ZM16 25.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 25.001Z"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Plus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_b_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput renders success validated 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-number-input"
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Minus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_4_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <span
          class="pf-v6-c-form-control pf-m-readonly pf-m-success"
        >
          <input
            aria-invalid="false"
            aria-label="Input"
            data-ouia-component-id="OUIA-Generated-TextInputBase-_r_6_"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            readonly=""
            type="number"
            value="0"
          />
          <span
            class="pf-v6-c-form-control__utilities"
          >
            <span
              class="pf-v6-c-form-control__icon pf-m-status"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm7.795 11.795-8.646 8.646c-.317.317-.733.475-1.149.475s-.832-.158-1.149-.475l-4.646-4.646a1.126 1.126 0 0 1 1.591-1.591l4.205 4.205 8.205-8.205a1.126 1.126 0 0 1 1.591 1.591Z"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Plus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_7_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput renders unit & position 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-number-input"
  >
    <div
      class="pf-v6-c-number-input__unit"
    >
      $
    </div>
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Minus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_14_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <span
          class="pf-v6-c-form-control pf-m-readonly"
        >
          <input
            aria-invalid="false"
            aria-label="Input"
            data-ouia-component-id="OUIA-Generated-TextInputBase-_r_16_"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            readonly=""
            type="number"
            value="5"
          />
        </span>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Plus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_17_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput renders unit 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-number-input"
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Minus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_10_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <span
          class="pf-v6-c-form-control pf-m-readonly"
        >
          <input
            aria-invalid="false"
            aria-label="Input"
            data-ouia-component-id="OUIA-Generated-TextInputBase-_r_12_"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            readonly=""
            type="number"
            value="5"
          />
        </span>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Plus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_13_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="pf-v6-c-number-input__unit"
    >
      %
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput renders value 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-number-input"
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Minus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_g_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <span
          class="pf-v6-c-form-control pf-m-readonly"
        >
          <input
            aria-invalid="false"
            aria-label="Input"
            data-ouia-component-id="OUIA-Generated-TextInputBase-_r_i_"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            readonly=""
            type="number"
            value="90"
          />
        </span>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Plus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_j_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput renders warning validated 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-number-input"
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Minus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_c_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <span
          class="pf-v6-c-form-control pf-m-readonly pf-m-warning"
        >
          <input
            aria-invalid="false"
            aria-label="Input"
            data-ouia-component-id="OUIA-Generated-TextInputBase-_r_e_"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            readonly=""
            type="number"
            value="0"
          />
          <span
            class="pf-v6-c-form-control__utilities"
          >
            <span
              class="pf-v6-c-form-control__icon pf-m-status"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="m31.874 28.514-15.011-27a1.001 1.001 0 0 0-1.748 0l-15.011 27A1 1 0 0 0 .978 30H31a1 1 0 0 0 .874-1.486ZM14.5 12a1.5 1.5 0 0 1 3 0v5a1.5 1.5 0 0 1-3 0v-5ZM16 26.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 26.001Z"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Plus"
          class="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-_r_f_"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-number-input__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
